--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <h3>Run with VirtualBox</h3>
       <ul>
         <li>Create a new VM of type “Linux 64-bit”</li>
-        <li>Attach <code>000os.iso</code> as a virtual optical disk</li>
+        <li>Attach <code>000OS.iso</code> as a virtual optical disk</li>
         <li>Start the VM and explore</li>
       </ul>
       <a href="https://github.com/umeshadabala/000OS/releases/download/000OS/000OS.iso" download class="button" aria-label="Download 000OS ISO">Download 000OS ISO</a>
@@ -187,7 +187,7 @@
         <li><a href="https://github.com/torvalds/linux" target="_blank" rel="noopener">Linux Kernel</a></li>
         <li><a href="https://busybox.net/" target="_blank" rel="noopener">BusyBox</a></li>
       </ul>
-      <p>This project is fully open-source and licensed under GPLv2, intended for educational and personal use.</p>
+      <p>This project is fully open-source, intended for educational and personal use.</p>
     </section>
   </main>
 
